Changed path for the login-side

--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registrera dig</title>
     <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -12,7 +12,7 @@
             
             <ul id="headmenu">
                 <li class="liheadmenu"><a href="register.html">Startsida</a></li>
-                <li class="liheadmenu"><a href="loggaIn.html">Logga in</a></li>
+                <li class="liheadmenu"><a href="loggin.html">Logga in</a></li>
                 <li class="liheadmenu"><a href="secretPage.html">secret</a></li>
      
             </ul>
