added ass.html with form and deleted secretPage.html.  added css and deleteAndChenge.html. Added Post funktion in main.js

--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logga in</title>
     <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
               <header class="position1">
@@ -29,7 +30,7 @@
         <input type="text" id="password" name="password">
           
         <br>
-        <input type="submit" value="Submit">
+        <input class= "submitButton" type="submit" value="Submit">
  
         
  </form>
