--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrera dig</title>
     <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
              <header class="position1">
@@ -12,7 +13,7 @@
             
             <ul id="headmenu">
                 <li class="liheadmenu"><a href="register.html">Startsida</a></li>
-                <li class="liheadmenu"><a href="loggin.html">Logga in</a></li>
+                <li class="liheadmenu"><a href="login.html">Logga in</a></li>
                 <li class="liheadmenu"><a href="secretPage.html">secret</a></li>
      
             </ul>
@@ -31,7 +32,8 @@
             <label for="password">Lösenord</label>
        <br>
         <input type="text" id="password" name="password">
-         <button id="submits">Registera mig</button>
+        <br>
+         <input type="submit" class= "submitButton"id="submits" value="Registera mig">
    
         <br>
 
