added function to show starters and to reomve a specifik starter

--- a/add.html
+++ b/add.html
@@ -14,7 +14,7 @@
             
             <ul id="headmenu">
                 <li class="liheadmenu"><a href="register.html">Startsida</a></li>
-                <li class="liheadmenu"><a href="loggaIn.html">Logga in</a></li>
+                <li class="liheadmenu"><a href="login.html">Logga in</a></li>
                 <li class="liheadmenu"><a href="secretPage.html">secret</a></li>
      
             </ul>
@@ -44,6 +44,22 @@
         </form>
 
         <h2>Vill du iställer ta bort eller ändra en specifik förrätt?</h2>
+            <table>
+                <thead>
+                <tr>
+                    <th>rubrik</th>
+                    <th>rubrik</th>
+                    <th>r</th>
+                </tr>
+                </thead>
+
+                <tbody id="starters">
+                    <tr >
+
+                    </tr>
+                </tbody>
+            </table>
+            <ul ></ul>
         </div>
 </body>
 
