updated add.html and added new form.

--- a/add.html
+++ b/add.html
@@ -38,7 +38,7 @@
             <label for="sPrice">Pris på förrätt</label> <br>
             <input type="text" name="sPrice" id="sPrice"><br>
             <label for="sDescription">Beskrivning av förrätt</label> <br>
-            <input type="text" name="sDescription" id="sDescription"><br>            
+            <textarea rows="5" cols="40" id="sDescription"></textarea><br>            
             <input type="submit" id="addStarter" value="Lägg till">
 
         </form>
@@ -47,9 +47,9 @@
             <table>
                 <thead>
                 <tr>
-                    <th>rubrik</th>
-                    <th>rubrik</th>
-                    <th>r</th>
+                    <th>Namn</th>
+                    <th>Pris</th>
+                    <th>Beskrivning</th>
                 </tr>
                 </thead>
 
@@ -60,6 +60,23 @@
                 </tbody>
             </table>
             <ul ></ul>
+        </div>
+            <div>
+              <h2><span id="h2_2">Denna rätt har id </span><span id="h2"></span></h2>
+              <form id="form">
+
+                <!-- <p id="id"></p> <br> -->
+            <!-- <label for="id">Namn på förrätt</label> <br>
+            <input type="text" name="id" id="id"><br> -->
+            <label for="name">Namn på förrätt</label> <br>
+            <input type="text" name="name" id="name"><br>
+            <label for="price">Pris på förrätt</label> <br>
+            <input type="text" name="price" id="price"><br>
+            <label for="description">Beskrivning av förrätt</label><br>
+            <textarea rows="5" cols="40" id="description"></textarea><br>            
+            <button id="change">  Ändra</button>
+
+        </form>
         </div>
 </body>
 
