maked so that the form resets

--- a/add.html
+++ b/add.html
@@ -44,7 +44,7 @@
         </form>
 
         <h2>Vill du iställer ta bort eller ändra en specifik förrätt?</h2>
-            <table>
+            <table id="tableStarters">
                 <thead>
                 <tr>
                     <th>Namn</th>
