updated add.html. Updated login.html and register.html with container and position. Added file reviewsAndContact. Updated styles. Added in main.js functions for review and contactUs. Removed som console log and comments and space.

--- a/add.html
+++ b/add.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="position1">
+    <header>
         <nav>
             
             <ul id="headmenu">
@@ -27,7 +27,7 @@
             <h1>Här kan du lägga till, ta bort och ändra på vår meny.</h1>
         </div>
 
-        <section class="position2">
+        <section id="buttonsmenu"class="position2">
             <h2>Vad vill du justera på meny?</h2>
             <button id="buttonStarters">Förrätter</button>
             <button id="buttonMainCourses">Huvudrätter</button>
