--- a/login.html
+++ b/login.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>  
         </header>
+           <div class="container">
+
+        <section class="position1register">
     <h1>Här kan du logga in</h1>
  <form id="logInForm">
     <label for="username">Användarnamn</label>
@@ -31,9 +34,10 @@
           
         <br>
         <input class= "submitButton" type="submit" value="Submit">
- 
+     </form>
         
- </form>
+    </section>
+</div>
  <!-- <button id="submit">Logga in</button>  -->
 </body>
 </html>
