--- a/register.html
+++ b/register.html
@@ -19,9 +19,13 @@
             </ul>
         </nav>  
         </header>
-    <h1>Här kan du registrera dig</h1>
- <form id="registerForm">
-    <label for="username">Användarnamn</label>
+
+        <div class="container">
+
+        <section class="position1register">
+     <h1>Här kan du registrera dig</h1>
+         <form id="registerForm">
+        <label for="username">Användarnamn</label>
        <br>
         <input type="text" id="username" name="username">
         <br>
@@ -41,6 +45,8 @@
 
         
  </form>
+ </section>
+ </div>
 
 </body>
 </html>
