added footer. updated function createUser. updated css

--- a/add.html
+++ b/add.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="js/checkAuth.js"></script> -->
+    <script src="js/checkAuth.js"></script>
     <script src="js/main.js" defer></script>
      <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -230,6 +230,10 @@
 
 
     </div>
+
+       <footer>
+        <p>Av Rebecca Smith, resm2400, 2025-08-25, Kurs DT207G</p>
+    </footer>
 </body>
 
 </html>
