--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omdömen och kontakt</title>
+     <script src="js/checkAuth.js"></script>
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -20,13 +21,21 @@
         </nav>  
         </header>
 
+  <div class="container">
 
-    <h1>Här kan du delete och ta hand om kontaktförfrågbningar</h1>
+        <section class="position1register">
+    <h2>Här kan du ta hand om och ta bort kontaktförfrågningar</h2>
   
             <h2>Meddelande från kontaktformulär</h2>
             <ul id="contactUs">
 
             </ul>
+
+             </section>
+ </div>
+    <footer>
+        <p>Av Rebecca Smith, resm2400, 2025-08-25, Kurs DT207G</p>
+    </footer>
 
 </body>
 </html>
