--- a/login.html
+++ b/login.html
@@ -38,6 +38,9 @@
         
     </section>
 </div>
+   <footer>
+        <p>Av Rebecca Smith, resm2400, 2025-08-25, Kurs DT207G</p>
+    </footer>
  <!-- <button id="submit">Logga in</button>  -->
 </body>
 </html>
