--- a/register.html
+++ b/register.html
@@ -48,5 +48,8 @@
  </section>
  </div>
 
+    <footer>
+        <p>Av Rebecca Smith, resm2400, 2025-08-25, Kurs DT207G</p>
+    </footer>
 </body>
 </html>
