--- a/reviews.html
+++ b/reviews.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omdömen och kontakt</title>
+     <script src="js/checkAuth.js"></script>
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -21,7 +22,7 @@
         </header>
 
 
-    <h1>Här kan du delete och ta hand om omdömen och kontaktförfrågbningar</h1>
+    <h1>Här kan du delete och ta hand om omdömen</h1>
                  <table id="tablereview">
                 <thead>
                 <tr>
@@ -38,6 +39,8 @@
                 </tbody>
             </table>
           
-
+   <footer>
+        <p>Av Rebecca Smith, resm2400, 2025-08-25, Kurs DT207G</p>
+    </footer>
 </body>
 </html>
